2009-08-26  Murray Cumming  <murrayc@murrayc.com>

  Use clutter-1.0 and clutter-gtk-0.10.

	* configure.ac: Use clutter-1.0 and clutter-gtk-0.10.
	* examples/gtk_scrolling/main.c (main): gtk_clutter_viewport_new() takes 
	an extra parameter now.
	* examples/custom_container/examplebox.c (example_box_pick):
	* examples/scrolling/scrollingcontainer.c
	(example_scrolling_container_pick): Use clutter_actor_paint() instead of 
	deprecated clutter_actor_pick(), though I am now not sure if these 
	implementations are correct at all.

2009-06-25  Murray Cumming  <murrayc@murrayc.com>

	Timeline, Animations: Mentino duration not frames-per-second.
	
	* docs/tutorial/clutter-tut.xml: Timeline, Animations: Talk about duration 
	rather than frames and frames-per-second, as per the new API. Describe the 
	wonderful way that clutter now just does the right thing. 

2009-06-25  Murray Cumming  <murrayc@murrayc.com>

	Fixed the build with latest clutter API.
	
	* examples/actor_events/main.c (on_stage_button_press),
	(on_rect_button_press), (on_rect_button_release):
	* examples/animation/main.c (on_alpha), (main):
	* examples/behaviour/main.c (on_alpha), (main):
	* examples/custom_container/examplebox.c
	(example_box_get_preferred_width),
	(example_box_get_preferred_height), (example_box_allocate):
	* examples/full_example/main.c (on_timeline_rotation_completed),
	(rotate_all_until_item_is_at_front), (main):
	* examples/score/main.c (main):
	* examples/scrolling/scrollingcontainer.c
	(example_scrolling_container_allocate):
	* examples/scrolling/scrollingcontainer.h:
	* examples/stage/main.c (on_stage_button_press):
	* examples/text/main.c (main):
	* examples/timeline/main.c (main): Fix the build with the latest clutter API, 
	mostly:
	- Providing a milliseconds duration to clutter_timeline_new() instead of 
	frame and frames_per_second, plus changing associated functions to be 
	duration-wise rather than frames-wise.
	- Use float instead of gint.
