@@ -1,1 +1,1 @@
-/usr/share/automake-1.10/COPYING
+/opt/gnome228/share/automake-1.11/COPYING
